# alibabacloud-opensearch-mcp-server

./: .gitignore  README.md
aisearch-mcp-server/: README.md  pyproject.toml
aisearch-mcp-server/src/aisearch_mcp_server/: __init__.py  prompt.py  server.py  util.py
opensearch-vector-mcp-server/: README.md  pyproject.toml
opensearch-vector-mcp-server/src/opensearch_vector_mcp_server/: __init__.py  server.py
