[project]
name = "opensearch-vector-mcp-server"
version = "1.0.0"
description = "A MCP Server for OpenSearch Vector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp[cli]>=1.5.0",
 "python-dotenv>=1.0.1",
 "alibabacloud_ha3engine_vector==1.1.13",
 "alibabacloud_searchplat20240529>=2.0.0"
]
[[project.authors]]
name = "Mengcheng Chen"
email = "bestcmc@163.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[project.scripts]
opensearch-vector-mcp-server = "opensearch_vector_mcp_server:main"
